{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 93,
  "lineage": "527196bc-2cb6-f565-a5dd-8ebe15652bce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:211125514051:instance/i-0f20fb415dbf1f35d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "N8NAutomationDemo-JenkinsServer-Instance-Profile",
            "id": "i-0f20fb415dbf1f35d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "nguyenp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011870927515b7aa7",
            "private_dns": "ip-10-0-1-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.124",
            "public_dns": "ec2-3-87-52-246.compute-1.amazonaws.com",
            "public_ip": "3.87.52.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a5098ac96aed89a5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b49e3eae1288df2f",
            "tags": {
              "Name": "N8NAutomationDemo-JenkinsServer",
              "Project": "N8NAutomationDemo",
              "Role": "Jenkins-Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-JenkinsServer",
              "Project": "N8NAutomationDemo",
              "Role": "Jenkins-Server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fd875924329fdb9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.jenkins_server_instance_profile",
            "aws_iam_role.jenkins_server_role",
            "aws_security_group.jenkins_server_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "n8n_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:211125514051:instance/i-0828c101d97e1c8e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "N8NAutomationDemo-n8nServer-Instance-Profile",
            "id": "i-0828c101d97e1c8e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nguyenp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a6a5b5d745e231c",
            "private_dns": "ip-10-0-1-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-34-227-150-220.compute-1.amazonaws.com",
            "public_ip": "34.227.150.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09b650caedf8e5701",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b49e3eae1288df2f",
            "tags": {
              "Name": "N8NAutomationDemo-n8nServer",
              "Project": "N8NAutomationDemo",
              "Role": "n8n-Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-n8nServer",
              "Project": "N8NAutomationDemo",
              "Role": "n8n-Server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3d83f1f85b46083"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.n8n_server_instance_profile",
            "aws_iam_role.n8n_server_role",
            "aws_security_group.n8n_server_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nagios_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:211125514051:instance/i-0cb83fca2241dacd1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "N8NAutomationDemo-NagiosServer-Instance-Profile",
            "id": "i-0cb83fca2241dacd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nguyenp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08378f300968e64d5",
            "private_dns": "ip-10-0-1-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.172",
            "public_dns": "ec2-54-227-233-172.compute-1.amazonaws.com",
            "public_ip": "54.227.233.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01c6b8059cdf38251",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b49e3eae1288df2f",
            "tags": {
              "Name": "N8NAutomationDemo-NagiosServer",
              "Project": "N8NAutomationDemo",
              "Role": "Nagios-Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-NagiosServer",
              "Project": "N8NAutomationDemo",
              "Role": "Nagios-Server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03776c3df7f1697f8"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.nagios_server_instance_profile",
            "aws_iam_role.nagios_server_role",
            "aws_security_group.nagios_server_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nfs_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:211125514051:instance/i-09514af217d6dce6c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "N8NAutomationDemo-NFS-Server-Instance-Profile",
            "id": "i-09514af217d6dce6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nguyenp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0279ca00bf8403374",
            "private_dns": "ip-10-0-1-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "public_dns": "ec2-54-163-128-67.compute-1.amazonaws.com",
            "public_ip": "54.163.128.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09ce136467a3da224",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b49e3eae1288df2f",
            "tags": {
              "Name": "N8NAutomationDemo-NFS-Server",
              "Project": "N8NAutomationDemo",
              "Role": "NFS-Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-NFS-Server",
              "Project": "N8NAutomationDemo",
              "Role": "NFS-Server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed1dbd1031c21453"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.nfs_server_instance_profile",
            "aws_iam_role.nfs_server_role",
            "aws_security_group.nfs_server_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:internet-gateway/igw-0cbc1c6945ceeaac3",
            "id": "igw-0cbc1c6945ceeaac3",
            "owner_id": "211125514051",
            "tags": {
              "Name": "N8NAutomationDemo-IGW",
              "Project": "N8NAutomationDemo",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-IGW",
              "Project": "N8NAutomationDemo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-079ccdba1cc5bf5fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:route-table/rtb-03ed8e6d02b01aa29",
            "id": "rtb-03ed8e6d02b01aa29",
            "owner_id": "211125514051",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cbc1c6945ceeaac3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "N8NAutomationDemo-Public-RouteTable",
              "Project": "N8NAutomationDemo",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-Public-RouteTable",
              "Project": "N8NAutomationDemo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-079ccdba1cc5bf5fa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e09f0cd025588eb",
            "route_table_id": "rtb-03ed8e6d02b01aa29",
            "subnet_id": "subnet-0b49e3eae1288df2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:security-group/sg-00fd875924329fdb9",
            "description": "Security group cho Jenkins Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fd875924329fdb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Agent port",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "171.235.185.235/32"
                ],
                "description": "Jenkins UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "171.235.185.235/32"
                ],
                "description": "SSH/Session Manager access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "N8NAutomationDemo-JenkinsServer-SG",
            "name_prefix": "",
            "owner_id": "211125514051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "N8NAutomationDemo-JenkinsServer-SG"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-JenkinsServer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-079ccdba1cc5bf5fa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "n8n_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:security-group/sg-0c3d83f1f85b46083",
            "description": "Security group cho n8n Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3d83f1f85b46083",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "n8n UI/Webhook port",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5678
              },
              {
                "cidr_blocks": [
                  "171.235.185.235/32"
                ],
                "description": "SSH/Session Manager access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "N8NAutomationDemo-n8nServer-SG",
            "name_prefix": "",
            "owner_id": "211125514051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "N8NAutomationDemo-n8nServer-SG"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-n8nServer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-079ccdba1cc5bf5fa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nagios_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:security-group/sg-03776c3df7f1697f8",
            "description": "Security group cho Nagios Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03776c3df7f1697f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "NRPE from monitored hosts (Customer VMs)",
                "from_port": 5666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5666
              },
              {
                "cidr_blocks": [
                  "171.235.185.235/32"
                ],
                "description": "Nagios UI (HTTP on custom port 8081)",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "171.235.185.235/32"
                ],
                "description": "SSH/Session Manager access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "N8NAutomationDemo-NagiosServer-SG",
            "name_prefix": "",
            "owner_id": "211125514051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "N8NAutomationDemo-NagiosServer-SG"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-NagiosServer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-079ccdba1cc5bf5fa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:security-group/sg-0ed1dbd1031c21453",
            "description": "Security group cho NFS Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed1dbd1031c21453",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "NFS from within VPC (TCP)",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "NFS from within VPC (UDP)",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "RPCBind/Portmapper from within VPC (TCP)",
                "from_port": 111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 111
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "RPCBind/Portmapper from within VPC (UDP)",
                "from_port": 111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 111
              },
              {
                "cidr_blocks": [
                  "171.235.185.235/32"
                ],
                "description": "SSH/Session Manager access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "N8NAutomationDemo-NFS-Server-SG",
            "name_prefix": "",
            "owner_id": "211125514051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "N8NAutomationDemo-NFS-Server-SG"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-NFS-Server-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-079ccdba1cc5bf5fa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:subnet/subnet-0b49e3eae1288df2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b49e3eae1288df2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125514051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "N8NAutomationDemo-Public-Subnet",
              "Project": "N8NAutomationDemo",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-Public-Subnet",
              "Project": "N8NAutomationDemo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-079ccdba1cc5bf5fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125514051:vpc/vpc-079ccdba1cc5bf5fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e89e985385b5eac",
            "default_route_table_id": "rtb-0605e65fc47199625",
            "default_security_group_id": "sg-0c0c244c8952d9571",
            "dhcp_options_id": "dopt-0026675c83313a1b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079ccdba1cc5bf5fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0605e65fc47199625",
            "owner_id": "211125514051",
            "tags": {
              "Name": "N8NAutomationDemo-VPC",
              "Project": "N8NAutomationDemo",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "N8NAutomationDemo-VPC",
              "Project": "N8NAutomationDemo",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}